# Realtime-Path-Tracing

./: .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  Cornell refractive.ppm  Cornell specular 2.ppm  Makefile  Makefile backup  Piramid.ppm  README.md  Ray tracer.cl  camera.h  display.c  display.cpp  display.h  geom.h  geomfunc.h  image.ppm  raytrace  raytrace.c  raytrace.cpp  raytrace.hpp  vec.h
Images/: Cornell diffuse 2.ppm  Cornell diffuse.ppm  Cornell specular.ppm  refractive walls.ppm
Presentacion/: .~lock.Presentacion.odp#
graphs/: script.py  tamano_pantalla.csv
res/kernels/: Ray tracer simple.cl  Ray tracer.cl  geomfunc.h
resultados/: bounces.csv  script.py
scenes/: RGB.scn  RGB2.scn  cornell.scn  cornell_refractive.scn  cornell_specular.scn  simple.scn
src/: raytrace.cpp  raytrace.hpp
